# TokenGT

./: .gitignore  main.py  pyproject.toml
notebook/: data-loading.ipynb  embeddings.ipynb  notebook.ipynb  organizing.ipynb  transformer.ipynb
notebook/runs/kanna-chameleon/: events.out.tfevents.1752700659.jhaberbe.3674434.3  events.out.tfevents.1752703999.jhaberbe.3674434.4  events.out.tfevents.1752704102.jhaberbe.3674434.5  events.out.tfevents.1752706133.jhaberbe.3674434.6  events.out.tfevents.1752706172.jhaberbe.3674434.7
notebook/runs/spatial_transformer_experiment/: events.out.tfevents.1752691433.jhaberbe.3674434.0  events.out.tfevents.1752691735.jhaberbe.3674434.1  events.out.tfevents.1752700647.jhaberbe.3674434.2
src/: data.py  losses.py  model.py
