[project]
name = "tokengt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "igraph>=0.11.9",
    "ipykernel>=6.29.5",
    "leidenalg>=0.10.2",
    "nflows>=0.14",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "pyro-ppl>=1.9.1",
    "scanpy>=1.11.3",
    "scikit-misc>=0.5.1",
    "scipy>=1.15.3",
    "scvi-tools>=1.3.2",
    "statsmodels>=0.14.5",
    "torch>=2.7.1",
    "torch-geometric>=2.6.1",
    "tqdm>=4.67.1",
    "wandb>=0.21.0",
]
